add-wheathe-icons-working

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="weather" >
             <div id="weatherHeader">
                 <h2><span id="time" > </span> </h2>
-                <img id="weatherIcon0" src="http://openweathermap.org/img/wn/10d@2x.png" >
+                <img id="weatherIcon0" src="">poiupoiu
                 <!-- <h2><span id="weatherIcon0" > </span> </h2> -->
                 <!-- <h2><span id="weatherIcon1" > </span> </h2> -->
                 <!-- <h2><span class="weatherIcon1"> </span> </h2> -->
