--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 
                 <button class="sBtn" onclick="searchingBtn()"> Search</button>
             </div>
-
+            <div id="searchHistory">
+                
+            </div>
 
         </aside>
         <div class="weather">
