history-buttons-link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header id="gradient">
+    <header id="gradient" class="col-12 ">
         <h1 id="title">Weather Dashboard <br>
 
             <p id="courrentHour"></p>
@@ -56,6 +56,7 @@
                 <h2> <span id="tempName"> </span></h2>
                 <h2> <span id="humidityName"> </span></h2>
                 <h2> <span id="windSpeed"> </span></h2>
+                <h2><span id="uv"></span></h2>
             </div>
             <div id="fiveDaysForecast">
 
