final-comit-done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <aside>
             <div class="search">
                 <h2>Sarch for a City: <br> <br>
-                    <input id="searchArea" type="text" placeholder="Enter City">
+                    <input id="searchArea" type="text" placeholder="Enter a city name:">
                 </h2>
 
                 <button class="sBtn" onclick="searchingBtn()"> Search</button>
@@ -54,9 +54,9 @@
                 <h2 id="description0"></h2>
                 <img id="weatherIcon0" src="">
                 <h2> <span id="tempName"> </span></h2>
-                <h2> <span id="humidityName"> </span></h2>
+                <h2> <span id="humidityName">  </span></h2>
                 <h2> <span id="windSpeed"> </span></h2>
-                <h2><span id="uv"></span></h2>
+                <h2><span id="uv"></span><span id="uvIndex"></span></h2>
             </div>
             <div id="fiveDaysForecast">
 
